Refactor ShopResearcherService